Ignore removed rehearsal video

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ next-env.d.ts
 public/Videos/Riot Reel - Made with Clipchamp.mp4
 public/Videos/video bg.mp4
 public/Videos/KARMANT- Smelling Death Rehearsal [1930930161090744].mp4
+public/Videos/Futurephobia - Violator cover [790524607187244].mp4
 
